syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hypertrace.gateway.service.v1.baseline";

package org.hypertrace.gateway.service.v1.health;

import "org/hypertrace/gateway/service/v1/gateway_query.proto";

message BaselineEntity {
  string id = 1;
  string entity_type = 2;
  map<string, org.hypertrace.gateway.service.v1.common.Value> attribute = 4;
  map<string, org.hypertrace.gateway.service.v1.common.Baseline> baseline = 5;
  map<string, org.hypertrace.gateway.service.v1.common.BaselineMetricSeries> baseline_metric_series = 6;
}

message BaselineEntitiesRequest {
  string entity_type = 1;
  sfixed64 start_time_millis = 2;
  sfixed64 end_time_millis = 3;

  // Filters using which the entities need to be filtered.
  org.hypertrace.gateway.service.v1.common.Filter filter = 4;

  // Selections
  repeated org.hypertrace.gateway.service.v1.common.Expression selection = 5;
  repeated org.hypertrace.gateway.service.v1.common.TimeAggregation time_aggregation = 6;
}

message BaselineEntitiesResponse {
  repeated BaselineEntity baselineEntity = 1;
}